--- a/Apps/src/main/res/layout/fragment_new_contact.xml
+++ b/Apps/src/main/res/layout/fragment_new_contact.xml
@@ -1,6 +1,215 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/buttonBack"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_gravity="start|center_vertical"
+            android:src="@drawable/ic_back"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="New Contact"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/flAvatar"
+        android:layout_width="104dp"
+        android:layout_height="104dp"
+        android:layout_below="@id/toolbar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/background_circle_aba4ff">
+
+        <ImageView
+            android:id="@+id/imvIconAddAvatar"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="end|top"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/background_circle_585858"
+            android:src="@drawable/ic_add"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/imvIconAvtNull"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_camera_add_new_video_caller"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/imvAvatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop" />
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/llName"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/flAvatar"
+        android:layout_marginHorizontal="16sp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/background_rectangle_stroke_d9d9d9"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
+            android:layout_height="18dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_user_name" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:fontFamily="@font/sfpro_display_medium"
+            android:text="Name: "
+            android:textColor="#4F4F4F"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edtName"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@android:color/transparent"
+            android:gravity="center_vertical"
+            android:hint="Your name"
+            android:textColorHint="#AEAEAE"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llNumber"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_below="@id/llName"
+        android:layout_marginHorizontal="16sp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/background_rectangle_stroke_d9d9d9"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="0dp"
+            android:layout_height="18dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_card_id" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:fontFamily="@font/sfpro_display_medium"
+            android:inputType="textPersonName"
+            android:text="Number: "
+            android:textColor="#4F4F4F"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/edtNumber"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@android:color/transparent"
+            android:gravity="center_vertical"
+            android:hint="Your number"
+            android:inputType="number"
+            android:textColorHint="#AEAEAE"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rlAddVideo"
+        android:layout_width="match_parent"
+        android:layout_height="304dp"
+        android:layout_below="@id/llNumber"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/background_rectangle_stroke_d9d9d9"
+        android:padding="6dp">
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/imvAddVideo"
+            android:layout_width="72dp"
+            android:layout_height="72dp"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_video"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/tvAddVideo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imvAddVideo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="-12dp"
+            android:fontFamily="@font/sfpro_display_regular"
+            android:text="Add Video"
+            android:textColor="#D9D9D9"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+    </RelativeLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonDone"
+        android:layout_width="240dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/rlAddVideo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/background_selector_button_done"
+        android:fontFamily="@font/sfpro_display_medium"
+        android:gravity="center"
+        android:text="Done"
+        android:textAllCaps="false"
+        android:textColor="@color/text_color_selector_button_done"
+        android:textSize="20sp"
+        tools:enabled="true"
+        tools:ignore="HardcodedText" />
+
+    <FrameLayout
+        android:id="@+id/main_banner_view"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="visible" />
+</RelativeLayout>
