--- a/Apps/src/main/res/layout/fragment_in_the_call.xml
+++ b/Apps/src/main/res/layout/fragment_in_the_call.xml
@@ -1,6 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/imageBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:alpha="0.5"
+        tools:background="@color/black" />
+
+    <RelativeLayout
+        android:id="@+id/rlAudiCall"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/imvAvatar"
+            android:layout_width="136dp"
+            android:layout_height="136dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="130dp"
+            tools:src="@drawable/image_vietnam" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/imvAvatar"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/sfpro_display_medium"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            tools:text="Adele" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textTimeCall"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textName"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/sfpro_display_regular"
+            android:gravity="center"
+            android:textColor="#EFF2F5"
+            android:textSize="18sp"
+            android:visibility="visible"
+            tools:text="00:00" />
+    </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/flVideoCall"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:background="@color/black"
+        android:visibility="visible"
+        tools:visibility="visible">
+
+        <VideoView
+            android:id="@+id/videoView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center" />
+
+        <androidx.camera.view.PreviewView
+            android:id="@+id/previewView"
+            android:layout_width="108dp"
+            android:layout_height="172dp"
+            android:layout_gravity="end"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="16dp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textTimeVideoCall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="24dp"
+            android:fontFamily="@font/sfpro_display_regular"
+            android:gravity="center"
+            android:textColor="#EFF2F5"
+            android:textSize="18sp"
+            android:visibility="visible"
+            tools:text="00:00" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/actionsAfterAnswer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginHorizontal="72dp"
+        android:layout_marginBottom="88dp">
+
+        <ImageView
+            android:id="@+id/buttonCallMode"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="start|center_vertical"
+            android:background="@drawable/background_circle_72ba50"
+            android:backgroundTint="@color/white"
+            android:padding="8dp"
+            android:src="@drawable/ic_video"
+            app:tint="@color/black"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/buttonTurnOffCall"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:background="@drawable/background_circle_ed2323"
+            android:padding="8dp"
+            android:src="@drawable/ic_call"
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:id="@+id/buttonMic"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="end|center_vertical"
+            android:background="@drawable/background_circle_72ba50"
+            android:backgroundTint="#794C4949"
+            android:padding="12dp"
+            android:src="@drawable/ic_voice_changer_mic"
+            app:tint="@color/white"
+            tools:ignore="ContentDescription" />
+    </FrameLayout>
+</FrameLayout>
